# codifix-ai-poc

./: .gitignore  README.md  bigquery_table_schema.csv  pyproject.toml
builder-crew/: agents.py  big_queries.py  bigquery_script.py  buscar_arquivos_kotlin.py  extrator_funcao.py  get_stack_trace.py  main.py  pyproject.toml  repo_downloader.py  tasks.py  webhook.py
builder-crew/models/: custom_models.py
builder-crew/tools/: custom_tools.py
fluxograma/: FluxoAutoPR.drawio
src/codifix_ai/: agents.py  bigquery_script.py  get_stack_trace.py  main.py  repo_downloader.py  tasks.py  webhook.py
src/codifix_ai/config/: agents.yaml  tasks.yaml
src/codifix_ai/models/: custom_models.py
src/codifix_ai/tools/: custom_tools.py
