[tool.poetry]
name = "codifix_ai"
version = "0.1.0"
description = ""
authors = ["Klaus Dellano <klaus.dias@havan.com.br>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}
python-dotenv = "1.0.0"

[tool.poetry.scripts]
codifix_ai = "codifix_ai.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"